--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+table{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left:30%;
+}
+tr:nth-child(2n-1){
+  background-color: rgb(182, 237, 255);
+}
+tr:nth-child(2n){
+  background-color: rgb(0, 191, 255);
+}
+
+.part-two {
+  background-color: gray;
+}
+
